# python-opendata-analysis-book-practice

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
code/: ch02_data_wrangling.py  ch03_statistics.py  ch04_data_visualization.py  ch05_opendata_and_gettingdata.py  ch06_official_statistic.py  ch07_population.py  estat.py  utils.py
code/data/ch02/: 法人データ.csv
code/data/ch07/: 1-1.xlsx  README.md
code/data/ch08/: README.md  hon-maikin-k-kicho.csv
code/data/ch09/: EdinetcodeDlInfo.csv  README.md  jgbcm_all.csv
code/data/ch10/: 6s-1-1.csv  README.md  b2020_202506s.xlsx
code/data/ch11/: README.md  gbiz_startup_df.csv
code/data/ch12/: README.md  gbiz_merged_df.csv  gbizinfo_list.csv
