[project]
name = "python-opendata-analysis-book-practice"
version = "0.1.0"
description = "『Pythonではじめるオープンデータ分析』(https://github.com/python-opendata-analysis/python-opendata-analysis-book) の練習用リポジトリ。uv と marimo を用いて実行・ノート作成・分析の演習を行います。`"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "html5lib>=1.1",
    "kaleido==0.2.1",
    "linearmodels>=7.0",
    "lxml>=6.0.2",
    "marimo>=0.17.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly==6.3.0",
    "python-dotenv>=1.1.1",
    "pyzmq>=27.1.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sparqlwrapper>=2.0.0",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
